Change spacing + ugly fix for paginator + add background option to simple layout

--- a/assets/css/compiled/main.css
+++ b/assets/css/compiled/main.css
@@ -1944,8 +1944,8 @@ select {
   min-height: 0px;
 }
 
-.min-h-\[148px\] {
-  min-height: 148px;
+.min-h-\[110px\] {
+  min-height: 110px;
 }
 
 .min-h-\[305px\] {
@@ -2182,7 +2182,7 @@ select {
 }
 
 .max-w-prose {
-  max-width: 65ch;
+  max-width: 72ch;
 }
 
 .max-w-xl {
